--- a/container/public/index.html
+++ b/container/public/index.html
@@ -6,7 +6,7 @@
   <title>Container JS </title>
 </head>
 <body>
-  <div id='dev-products'></div>
+  <div id='root'></div>
   <div id='dev-cart'></div>
 </body>
 </html>
