add container save requires

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Container JS </title>
+  <meta
+    name="description"
+    content="Web site created using create-react-app"
+  />
+  <link rel="icon" href="./favicon.ico" />
+  <title>Container JSX </title>
+  
 </head>
 <body>
   <div id='root'></div>
